objects/User_Stories__c.object
<CustomObject>
    <fields>
        <fullName>As_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>As a &lt;User Role&gt;</description>
        <label>As A &lt;user Role&gt;</label>
        <referenceTo>User_Role__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_need_to_Goal__c</fullName>
        <label>I need to &lt;Goal&gt;</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scrum_Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>Scrum_Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>So_that_reason__c</fullName>
        <label>So that &lt;reason&gt;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Awaiting Clarifications</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In UAT</fullName>
                </value>
                <value>
                    <fullName>Ready to Deploy</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>As_A__c</columns>
        <columns>I_need_to_Goal__c</columns>
        <columns>Priority__c</columns>
        <columns>Effort__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>As_A__c</columns>
        <columns>I_need_to_Goal__c</columns>
        <columns>Effort__c</columns>
        <columns>Sprint__c</columns>
        <columns>Theme__c</columns>
        <columns>Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
        </filters>
        <label>Backlog</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>